<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.philipsremote.fragments.NavigationFragment" >

    <Button
        android:id="@+id/button_1"
        android:width="@dimen/button_default_size"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="0"
        android:text="@string/button_1" />
    
    <Button
        android:id="@+id/button_2"
        android:width="@dimen/button_default_size"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="@string/button_2" />
    
    <Button
        android:id="@+id/button_3"
        android:width="@dimen/button_default_size"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="@string/button_3" />
    
    
    <Button
        android:id="@+id/button_4"
        android:width="@dimen/button_default_size"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/button_4" />
    
    <Button
        android:id="@+id/button_5"
        android:width="@dimen/button_default_size"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:text="@string/button_5" />
    
    <Button
        android:id="@+id/button_6"
        android:width="@dimen/button_default_size"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text="@string/button_6" />
    
    
    <Button
        android:id="@+id/button_7"
        android:width="@dimen/button_default_size"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="2"
        android:text="@string/button_7" />
    
    <Button
        android:id="@+id/button_8"
        android:width="@dimen/button_default_size"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:text="@string/button_8" />
    
    <Button
        android:id="@+id/button_9"
        android:width="@dimen/button_default_size"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="2"
        android:text="@string/button_9" />
    
    <Button
        android:id="@+id/button_0"
        android:width="@dimen/button_default_size"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="3"
        android:text="@string/button_0" />

</GridLayout>