<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:philips="http://schemas.android.com/apk/res-auto"
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.philipsremote.fragments.ChannelVolumeFragment" >
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_volume_down"
        android:width="@dimen/button_default_size"
        android:layout_column="0"
        android:layout_row="1"
        android:text="@string/button_volume_down"
        philips:json_key="VolumeDown" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_volume_mute"
        android:width="@dimen/button_default_size"
        android:layout_gravity="center_horizontal"
        android:layout_column="1"
        android:layout_row="1"
        android:text="@string/button_volume_mute"
        philips:json_key="Mute" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_volume_up"
        android:width="@dimen/button_default_size"
        android:layout_column="2"
        android:layout_row="1"
        android:text="@string/button_volume_up"
        philips:json_key="VolumeUp" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_channel_down"
        android:width="@dimen/button_default_size"
        android:layout_column="0"
        android:layout_row="0"
        android:text="@string/button_channel_down" 
        philips:json_key="ChannelStepDown" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_channel_up"
        android:width="@dimen/button_default_size"
        android:layout_column="2"
        android:layout_row="0"
        android:text="@string/button_channel_up"
        philips:json_key="ChannelStepUp" />

</GridLayout>