<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:philips="http://schemas.android.com/apk/res-auto"
    android:id="@+id/GridLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:columnCount="3"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.philipsremote.fragments.NavigationFragment" >

    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_list"
        android:width="@dimen/button_default_size"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="0"
        android:text="@string/button_list"
        android:onClick="clickButton"
        philips:json_key="List" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_up"
        android:width="@dimen/button_default_size"
        android:layout_column="1"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="0"
        android:text="@string/button_up"
        android:onClick="clickButton"
        philips:json_key="CursorUp" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_info"
        android:width="@dimen/button_default_size"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="0"
        android:text="@string/button_info"
        android:onClick="clickButton"
        philips:json_key="Info" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />
    
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_left"
        android:width="@dimen/button_default_size"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="1"
        android:text="@string/buton_left"
        android:onClick="clickButton"
        philips:json_key="CursorLeft" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_ok"
        android:width="@dimen/button_default_size"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="1"
        android:text="@string/button_ok"
        android:onClick="clickButton"
        philips:json_key="Confirm" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_right"
        android:width="@dimen/button_default_size"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="1"
        android:text="@string/button_right"
        android:onClick="clickButton"
        philips:json_key="CursorRight" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />
    
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_exit"
        android:width="@dimen/button_default_size"
        android:layout_column="0"
        android:layout_gravity="right"
        android:layout_row="2"
        android:text="@string/button_exit"
        android:onClick="clickButton"
        philips:json_key="Exit" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_down"
        android:width="@dimen/button_default_size"
        android:layout_column="1"
        android:layout_gravity="center_horizontal"
        android:layout_row="2"
        android:text="@string/button_down"
        android:onClick="clickButton"
        philips:json_key="CursorDown" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />
    
    <com.example.philipsremote.PhilipsButton
        android:id="@+id/button_options"
        android:width="@dimen/button_default_size"
        android:layout_column="2"
        android:layout_gravity="left"
        android:layout_row="2"
        android:text="@string/button_options"
        android:onClick="clickButton"
        philips:json_key="Options" 
        android:textColor="@color/main_color"
        android:background="@drawable/custom_button" />

</GridLayout>